# ssh-mcp-server

./: .gitignore  .safety-project.ini  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
config/: hosts.example.json  templates.json
src/ssh_mcp/: __init__.py  __main__.py  approvals.py  audit.py  auth.py  certs.py  cli.py  config.py  executor.py  guardrails.py  jobs.py  redact.py  server.py  sessions.py
src/ssh_mcp/defaults/: __init__.py  hosts.example.json
tests/: test_approvals_guardrails.py  test_audit.py  test_auth.py  test_certs.py  test_config.py  test_jobs.py  test_redact.py  test_sessions.py  test_sftp.py
vscode-extension/: .vscodeignore  CHANGELOG.md  README.md  package.json  ssh-mcp-server-secure-0.1.1.vsix  ssh-mcp-server-secure-0.1.3.vsix
