[project]
name = "ssh-mcp-server-copilot"
version = "0.1.0"
description = "Hardened SSH MCP server for VS Code / Copilot Chat — run policy-scoped commands on remote hosts via natural language"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["mcp", "ssh", "vscode", "copilot", "remote", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "paramiko>=3.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
]

[project.urls]
Homepage = "https://github.com/bhayanak/ssh-mcp-server"
Repository = "https://github.com/bhayanak/ssh-mcp-server"
Issues = "https://github.com/bhayanak/ssh-mcp-server/issues"

[project.scripts]
ssh-mcp-server = "ssh_mcp.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ssh_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
